2003-09-10  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* Makefile.am: only build the gl/ directory if required

	* configure.ac: simplify handling of --enable-demos. Add support
	for --disable-gl option; gl support is only compiled in if
	GL/glx.h is found

2003-09-09  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* config/xformsinclude.m4 (XFORMS_CHECK_LIB_JPEG): no need to link
	against the X11 libs...

	* configure.ac: remove lots of checks for headers and functions.
	We only keep the ones that were already tested for in the old
	source (although we do not know whether they are still useful).

	* lib/asyn_io.c: use HAVE_SYS_SELECT_H

2003-09-09  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* Makefile.am: only build demos/ directory if required

	* configure.ac: add --enable-demos option

2003-09-09  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/forms.c (fl_keyboard): pass it the event to allow it to
	distinguish between KeyPress and KeyRelease events.
	(dispatch_key): new function, factored out of do_keyboard.
	(do_keyboard): Handles KeyRelease events correctly. The KeyPress keysym
	is stored and then dispatched on KeyRelease also, since
	XmbLookupString is undefined on a KeyRelease event.

2003-09-05  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/version.c (fl_print_version): remove workaround for XENIX

	* lib/local.h: remove NO_SOCK (who wants to support old SCO anyway?)

2003-07-31  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/local.h (FL_SIGRET):

	* lib/signal.c (default_signal_handler): use RETSIGTYPE instead of
	FL_SIG_RET

	* lib/errmsg.c (fl_get_syserror_msg): use HAVE_STRERROR

	* lib/sysdep.c (fl_msleep): use HAVE_USLEEP

	* lib/local.h: remove variables DONT_HAVE_USLEEP,
	DONT_HAVE_STRERROR, NO_CONST (handled by AC_C_CONST),
	FL_SIGRET_IS_VOID, FL_SIGRET

	* configure.ac: check for usleep too

2003-05-23  Angus Leeming  <angus.leeming@btopenworld.com>

	* image/rgb_db.c: follow Rouben Rostamian's advice and remove all the