@@ -6,4 +6,3 @@ MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
 
 AM_INSTALL_DATA_FLAGS = $(INSTALL) -m 644 -D
 
-LIBS =
